deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-deployment
  namespace: prod
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: python_http_server
        image: amila11111/python_http_server:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: python-web-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
